tests/ui/parser/macro/macro-in-attribute.stderr
error: expected a literal (`1u8`, `1.0f32`, `"string"`, etc.) here, found macro call
  --> $DIR/macro-in-attribute.rs:4:21
   |
LL | #[deprecated(note = concat!("a", "b"))]
   |                     ^^^^^^^^^^^^^^^^^ macro calls are not allowed here

error: aborting due to 1 previous error

